--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,10 @@ dependencies {
     // Kotlin + coroutines
     implementation("androidx.work:work-runtime:$work_version")
 
+    // preference datastore
+
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+
 
 }
